test_data/Json/Unexpected/Unserializable/InvalidModelType/RelationshipElement/wrong.json.exception
Expected the model type 'RelationshipElement', but got soReallyUtterlyInvalid at: modelType